--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -114,6 +114,4 @@ import StackAlt from './assets/stackalt.svg';
   
 `}</style>
 
-# Welcome to Cellebrite Storybook
-
-<img src="https://img.securityinfowatch.com/files/base/cygnus/siw/image/2020/05/cellebrite_1024x270.5ec5a655aa373.png?auto=format&fit=max&w=1200" />
+# Welcome to my Storybook
